--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,7 @@ add_service_files(
 )
 
 ## Generate actions in the 'action' folder
-add_action_files(DIRECTORY action FILES Allocate.action)
+add_action_files(DIRECTORY action FILES Allocate.action Auction.action)
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
